--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -1,6 +1,14 @@
-body{
+html{
     background-image: linear-gradient(45deg, #F38122, #F76B58);
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden;
 }
+
+body {
+    background-color: rgba(0, 0, 0, 0);
+}
+
 h1{
     font-family: 'Lobster';
     text-align: center;
@@ -27,4 +35,44 @@ h3{
 @keyframes fadeIn {
     from {opacity: 0;}
     to {opacity: 1;}
+}
+
+.select-border {
+    border: solid teal 10px;
+}
+
+.picker {
+    overflow-x: scroll;
+}
+
+.picker-column {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+}
+
+.picker-row {
+    overflow-x:scroll;
+    white-space:nowrap;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+}
+
+.picker-background {
+    background-color: white;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.picker-menu {
+    position: fixed;
+    width: 100%;
+    height: 100px;
+    bottom: 0;
+}
+
+.picker-icon {
+    cursor: pointer;
 }
