--- a/client/templates/panda_light_base.html
+++ b/client/templates/panda_light_base.html
@@ -9,7 +9,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
             
     </head>
-    <body style="background-image: linear-gradient(45deg, #181817, #373636,#181817)">
+    <body style="background-image: linear-gradient(45deg, #F3ECE9, #D7D0CE, #F3ECE9)">
         {% include header %}
         {% include footer %}
     </body>
