--- a/templates/panda_dark_footer.html
+++ b/templates/panda_dark_footer.html
@@ -1,5 +1,5 @@
 
-<footer class="page-footer black">
+<footer class="page-footer black" style="bottom:0;width:100%;position:absolute;">
     <div class="container">
         <div class="row">
             <div class="col l6 s12">
