--- a/templates/pumpkin_footer.html
+++ b/templates/pumpkin_footer.html
@@ -1,5 +1,5 @@
 
-<footer class="page-footer " style="background-color: #554605; ">
+<footer class="page-footer " style="background-color: #554605;bottom:0;width:100%;position:absolute;">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
